<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    android:baselineAligned="false">


    <EditText
        android:id="@+id/txtEndrePersonNavn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/navn"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtEndrePersonTelefon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefon"
        android:inputType="textPersonName" />

    <Button
        android:background="@color/colorPrimary"
        android:id="@+id/btnEndrePerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/endre_person"
        android:onClick="endrePerson"/>

    <Button
        android:background="@color/colorAccent"
        android:id="@+id/btnSlettPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slett_person"
        android:onClick="slettPerson"/>
</LinearLayout>