<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    android:baselineAligned="false">


    <TextView
        android:textStyle="bold|italic"

        android:id="@+id/Navn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navn" />

    <EditText
        android:id="@+id/txtRegPersonNavn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:textStyle="bold|italic"

        android:id="@+id/telefon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefon" />

    <EditText
        android:id="@+id/txtRegPersonTelefon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"/>

    <Button
        android:background="@color/colorPrimary"
        android:id="@+id/btnRegPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrer"
        android:onClick="RegistrerPerson"/>



</LinearLayout>